[package]
name = "loki-logger"
version = "0.1.3"
authors = ["Thomas Nicollet <thomas.nicollet@nebulis.io>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "A loki logger for the log facade."
edition = "2021"
homepage = "https://github.com/nwmqpa/loki-logger"
repository = "https://github.com/nwmqpa/loki-logger"

[features]
default = ["trust-dns"]
blocking = ["reqwest/blocking"]
trust-dns = ["reqwest/trust-dns"]

[dependencies]
log = { version = "0.4.21", features = ["kv", "std"] }
prost = "0.12.6"
prost-types = "0.12.6"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
snap = "1"
tokio = { version = "1.13.0", features = ["full"] }
env_filter = "0.1.0"

[build-dependencies]
prost-build = "0.12.6"

[[example]]
name = "main"

[[example]]
name = "with_labels"

[[example]]
name = "blocking"
required-features = ["blocking"]
